--- a/ReversationApp/.gitignore
+++ b/ReversationApp/.gitignore
@@ -7,7 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+package.json
+package-lock.json
+
+
+node_modules/
 dist
 dist-ssr
 *.local
