--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.ignoreWords": ["Miasto"],
+  "cSpell.ignoreWords": ["Miasto", "Xmark"],
   "cSpell.words": ["Aparthotel", "fontawesome", "fortawesome"]
 }
